# GPT-lit-reviewer

./: .gitignore  README.md  example_main.py  get_bansal.ipynb  gpt.py  main.py  pyproject.toml  requirements.txt  scholar_api.py  workspace_example.py
dev/: get_bansal.ipynb  readme.md  scrap_arxiv.ipynb
src/: example_main.py  gpt.py  load_key.py  scholar_api.py  scrape_arxiv.py  seeker.py
src/dev/: get_llm_as_human_subject.ipynb
src/gpt_lit_reviewer/: gpt.py  scholar_api.py  seeker.py
