[project]
name = "gpt-lit-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv-api-python-client",
    "atoma>=0.0.17",
    "matplotlib>=3.10.1",
    "openai>=1.68.2",
    "platformdirs>=4.3.7",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
arxiv-api-python-client = { git = "https://github.com/Daniel-Chin/arXiv-API-Python-client" }
